# photonos-scripts

./: .gitignore  .snyk  CreatePhotonOSVmOnAzure.ps1  CreatePhotonOsVmOnAzure.ps1  DockerPwshGalleryonPhotonOS.sh  Dockerfile  Findings_MkbundledNuget.txt  Findings_PwshGalleryOnPhotonOS.txt  Findings_PwshOnPhotonOS.txt  Findings_VMwarePlayerOnPhotonOS.txt  Get-CybersecurityToolsWithGrok.ps1  ITERATIONS-LOG.md  Install-PwshGalleryOnPhotonOS.ps1  Pwsh6.1.0OnPhotonOS.sh  Pwsh6.1.1OnPhotonOS.sh  Pwsh6.2.3OnPhotonOS.sh  Pwsh6.2.3OnPhotonOSCleanup.sh  Pwsh6.2.4OnPhotonOS.sh  Pwsh6.2.5OnPhotonOS.sh  Pwsh6.2.6OnPhotonOS.sh  Pwsh6.2.7OnPhotonOS.sh  Pwsh7.0.0-rc.2OnPhotonOS.sh  Pwsh7.0.0OnPhotonOS.sh  Pwsh7.0.1OnPhotonOS.sh  Pwsh7.0.2OnPhotonOS.sh  Pwsh7.0.3OnPhotonOS.sh  Pwsh7.0.4OnPhotonOS.sh  Pwsh7.0.5OnPhotonOS.sh  Pwsh7.0.7OnPhotonOS.sh  Pwsh7.0.8OnPhotonOS.sh  Pwsh7.1.0-preview.1OnPhotonOS.sh  Pwsh7.1.0-preview.4OnPhotonOS.sh  Pwsh7.1.0-preview.6OnPhotonOS.sh  Pwsh7.1.0-rc.1OnPhotonOS.sh  Pwsh7.1.0-rc.2OnPhotonOS.sh  Pwsh7.1.0.p1OnPhotonOS.sh  Pwsh7.1.0.p2OnPhotonOS.sh  Pwsh7.1.0.p3OnPhotonOS.sh  Pwsh7.1.0.p4OnPhotonOS.sh  Pwsh7.1.0.p5OnPhotonOS.sh  (+35 more)
SPAGAT-Librarian/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MEANING.md  Makefile  PLAN.md  PROPOSAL-AUTONOMY.md  PROPOSAL-SYSAWARE.md  PROPOSAL.md  README.md  spagat.spec
SPAGAT-Librarian/include/: spagat.h
SPAGAT-Librarian/skills/: docker.md  iptables.md  logs.md  network.md  performance.md  systemctl.md  tdnf.md  users.md
SPAGAT-Librarian/sql/: schema.sql
SPAGAT-Librarian/src/: main.c
SPAGAT-Librarian/src/agent/: agent.h  config_io.c  heartbeat.c  onboard.c  sandbox.c  scheduler.c  subagent.c  subagent.h  workspace.c
SPAGAT-Librarian/src/ai/: ai.h  autonomy.c  autonomy.h  compaction.c  compaction.h  conversation.c  embedded_model.c  embedded_model.h  execpolicy.c  execpolicy.h  git_tools.c  git_tools.h  linux_sandbox.c  linux_sandbox.h  llama_bridge.cpp  llama_bridge.h  local.c  local_prompt.c  local_prompt.h  memory.c  prompt_builder.c  prompt_builder.h  sanitize.c  sanitize.h  streaming.c  sysaware.c  sysaware.h  tools.c  tools_builtin.c  tools_fs.c  tools_fs.h  tools_fs_read.c  tools_fs_write.c  tools_sysinfo.c
SPAGAT-Librarian/src/cli/: agent_input.c  agent_input.h  cli.c  cli.h  cli_ai.c  cli_ai_cmds.c  cli_ai_subagent.c  cli_dispatch.c  cli_ext.c  input_classify.c  (+1 more)
docsystem/: CodingAI-installers.sh  Droid-Ollama-configurator.sh  Droid-configurator.sh  FINAL-REMEDIATION-REPORT.md  MEMORY_FIX_SUMMARY.md  Ollama-installer.sh  README.md  analyzer.py  configuresound.sh  detect-orphaned-directories.py  docsinspector.sh  extract_urls.py  fetch_project_status.py  files-edited.md  fix-markdown-hierarchy.py  generate_all_missing.sh  installer-consolebackend.sh  installer-ghinterconnection.sh  installer-searchbackend.sh  installer-sitebuild.sh  installer-sitebuild.sh.0  installer-sitebuild.sh.1  installer-sitebuild.sh.2  installer-weblinkfixes.sh  installer.sh  local_sitemap.xml  migrate2docusaurus.sh  migrate2mkdocs.sh  photonos-docs-lecturer.py  plan.md  prod_sitemap.xml  pyproject.toml  report-2025-11-23_13-29-10.csv  report-2025-11-23_13-30-36.csv  report-2025-11-24T22:40:53.724682.csv  report-2025-11-24T23:13:45.125211.csv  report-2025-11-24T23:46:30.272106.csv  report-2025-11-25T00:17:13.441558.csv  report-2025-11-25T00:51:42.106853.csv  setup-analyzer.sh  (+3 more)
docsystem/.factory/: AGENTS.md  README.md  auto-config.json  config.json  mcp.json  settings.json  swarm-goals.md
docsystem/Migrate2MkDocs/: README.md
docsystem/archive/: VERIFICATION_REPORT.md  VERSION_CONTROL_README.md  extract_versions.sh  extract_versions_fixed.sh
docsystem/specs/: prd.md
docsystem/tests/: test_db_schema.py  test_importer.py  test_summarizer.py
kernelpatches/: README.md  install.sh  integrate_kernel_patches.sh  kernel-backport-processor.md  kernel_backport.sh  kernel_backport_unified.sh  patch_routing.skills  pyproject.toml  requirements.txt
kernelpatches/bash/: kernel_backport.sh
kernelpatches/lib/: build.sh  common.sh  cve_analysis.sh  cve_sources.sh  stable_patches.sh
kernelpatches/scripts/: __init__.py  backport.py  build.py  cli.py  common.py  config.py  cve_analysis.py  cve_coverage_build_workflow.py  cve_gap_detection.py  cve_matrix.py  cve_sources.py  generate_full_matrix.py  installer.py  models.py  source_verification.py  spec_file.py  stable_patches.py
kernelpatches/tests/: __init__.py  test_common.py  test_config.py  test_cve_matrix.py  test_models.py  test_spec_file.py
photon-depgraph-deep/: ARCHITECTURE.md  CMakeLists.txt  README.md
photon-depgraph-deep/data/: api-version-patterns.csv  gomod-package-map.csv
photon-depgraph-deep/src/: api_version_extractor.c  api_version_extractor.h  conflict_detector.c  conflict_detector.h  gomod_analyzer.c  gomod_analyzer.h  gomod_to_package_map.c  graph.c  json_output.c  json_output.h  main.c  manifest_writer.c  pyproject_analyzer.c  pyproject_analyzer.h  spec_parser.c  spec_patcher.c  spec_patcher.h  virtual_provides.c  virtual_provides.h
photonos-package-report/package-report-database-tool/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md
photonos-package-report/photonos-package-report/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md
upstream-source-code-dependency-scanner/: ARCHITECTURE.md  CMakeLists.txt  README.md  docker-findings-5.0.md
upstream-source-code-dependency-scanner/.github/: depfix-manifest-schema.json  quality-rubric.md
upstream-source-code-dependency-scanner/data/: api-version-patterns.csv  docker-api-version-map.csv  gomod-package-map.csv
upstream-source-code-dependency-scanner/specs/: prd.md
upstream-source-code-dependency-scanner/src/: api_version_extractor.c  api_version_extractor.h  conflict_detector.c  conflict_detector.h  gomod_analyzer.c  gomod_analyzer.h  gomod_to_package_map.h  graph.c  graph.h  json_output.c  main.c  manifest_writer.c  manifest_writer.h  prn_parser.c  prn_parser.h  pyproject_analyzer.c  spec_parser.c  spec_parser.h  spec_patcher.c  tarball_analyzer.c  tarball_analyzer.h
(+2561 files in other folders)
