[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "docsystem"
version = "1.0.0"
description = "Documentation management, quality analysis, and publishing platform for VMware Photon OS"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "tqdm>=4.65",
]

[project.optional-dependencies]
quality = [
    "language-tool-python>=2.7",
    "Pillow>=10.0",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".factory/skills"]

[tool.ruff]
target-version = "py39"
line-length = 120
